--- a/.github/workflows/dictionary-build.yml
+++ b/.github/workflows/dictionary-build.yml
@@ -19,7 +19,7 @@ jobs:
         run: sudo apt-get install -y xz-utils
 
       - name: Build dictionary
-        run: go run main.go -input jmdict-eng-3.5.0.json -output static/dictionary -workers 8
+        run: go run main.go jmdict_types.go -input jmdict-eng-3.5.0.json -output static/dictionary -workers 8
 
       - name: Commit dictionary files
         run: |
