--- a/.github/workflows/dictionary-build.yml
+++ b/.github/workflows/dictionary-build.yml
@@ -25,6 +25,6 @@ jobs:
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          git add static/dictionary/
+          git add dictionary/
           git commit -m "Update dictionary files" || echo "No changes to commit"
           git push
