--- a/.github/workflows/dictionary-build.yml
+++ b/.github/workflows/dictionary-build.yml
@@ -20,13 +20,17 @@ jobs:
       - name: Install xz-utils
         run: sudo apt-get install -y xz-utils
 
-      - name: Build dictionary
-        run: go run main.go jmdict_types.go -output dictionary -workers 4
+      - name: Build JMdict
+        run: go run main.go jmdict_types.go --dict jmdict --workers 4
+
+      # Future dictionaries can be added here
+      #- name: Build KanjiDic
+      #  run: go run main.go jmdict_types.go --dict kanjidic --workers 4
 
       - name: Commit dictionary files
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          git add -f dictionary/
+          git add -f dictionaries/*/output/
           git commit -m "Update dictionary files" || echo "No changes to commit"
           git push
