--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ dictionaries/*/output/
 dictionaries/*/source/*.json
 !dictionaries/chinese_chars/source/dictionary_char_2024-06-17.json
 !dictionaries/chinese_words/source/dictionary_word_2024-06-17.json
+!dictionaries/jmdict/source/jmdict-examples-eng-3.6.1.json
+!dictionaries/jmnedict/source/jmnedict-all-3.6.1.json
+!dictionaries/kanjidic/source/kanjidic2-en-3.6.1.json
 dictionaries/*/source/*.json.xz
 output/
 output_unzipped/
