--- a/.github/workflows/dictionary-build.yml
+++ b/.github/workflows/dictionary-build.yml
@@ -48,6 +48,42 @@ jobs:
           # Verify files were downloaded
           ls -la dictionaries/jmdict/source/
           ls -la dictionaries/jmnedict/source/
+
+          # Create Kanjidic directory if it doesn't exist
+          mkdir -p dictionaries/kanjidic/source
+
+          # Check if Kanjidic file exists
+          if [ -f "dictionaries/kanjidic/source/kanjidic2-en-3.6.1.json" ]; then
+            echo "Kanjidic file exists"
+            ls -la dictionaries/kanjidic/source/
+          else
+            echo "Kanjidic file does not exist, downloading..."
+            curl -L -o dictionaries/kanjidic/source/kanjidic2-en-3.6.1.json https://github.com/scriptin/jmdict-simplified/releases/download/3.6.1+20250505122413/kanjidic2-en-3.6.1+20250505122413.json
+            ls -la dictionaries/kanjidic/source/
+          fi
+
+          # Create Chinese dictionary directories if they don't exist
+          mkdir -p dictionaries/chinese_chars/source
+          mkdir -p dictionaries/chinese_words/source
+
+          # Check if Chinese dictionary files exist
+          if [ -f "dictionaries/chinese_chars/source/dictionary_char_2024-06-17.json" ]; then
+            echo "Chinese character dictionary file exists"
+          else
+            echo "Chinese character dictionary file does not exist, creating empty file"
+            echo "[]" > dictionaries/chinese_chars/source/dictionary_char_2024-06-17.json
+          fi
+
+          if [ -f "dictionaries/chinese_words/source/dictionary_word_2024-06-17.json" ]; then
+            echo "Chinese word dictionary file exists"
+          else
+            echo "Chinese word dictionary file does not exist, creating empty file"
+            echo "[]" > dictionaries/chinese_words/source/dictionary_word_2024-06-17.json
+          fi
+
+          # Verify all files
+          ls -la dictionaries/jmdict/source/
+          ls -la dictionaries/jmnedict/source/
           ls -la dictionaries/kanjidic/source/
           ls -la dictionaries/chinese_chars/source/
           ls -la dictionaries/chinese_words/source/
@@ -73,23 +109,23 @@ jobs:
       - name: Trigger Han-1Char Build
         uses: peter-evans/repository-dispatch@v2
         with:
-          token: ${{ secrets.REPO_ACCESS_TOKEN }}
+          token: ${{ secrets.DICTIONARY_DEPLOY_TOKEN }}
           event-type: build-han-1char
 
       - name: Trigger Han-2Char Build
         uses: peter-evans/repository-dispatch@v2
         with:
-          token: ${{ secrets.REPO_ACCESS_TOKEN }}
+          token: ${{ secrets.DICTIONARY_DEPLOY_TOKEN }}
           event-type: build-han-2char
 
       - name: Trigger Han-3Plus Build
         uses: peter-evans/repository-dispatch@v2
         with:
-          token: ${{ secrets.REPO_ACCESS_TOKEN }}
+          token: ${{ secrets.DICTIONARY_DEPLOY_TOKEN }}
           event-type: build-han-3plus
 
       - name: Trigger Non-Han Build
         uses: peter-evans/repository-dispatch@v2
         with:
-          token: ${{ secrets.REPO_ACCESS_TOKEN }}
+          token: ${{ secrets.DICTIONARY_DEPLOY_TOKEN }}
           event-type: build-non-han
