Update scripts to download and convert Chinese dictionary files from JSONL to JSON

--- a/.github/workflows/build-han-1char.yml
+++ b/.github/workflows/build-han-1char.yml
@@ -59,23 +59,28 @@ jobs:
             ls -la dictionaries/kanjidic/source/
           fi
 
-          # Create Chinese dictionary directories if they don't exist
+          # Download and convert Chinese character dictionary
           mkdir -p dictionaries/chinese_chars/source
-          mkdir -p dictionaries/chinese_words/source
-
-          # Check if Chinese dictionary files exist
           if [ -f "dictionaries/chinese_chars/source/dictionary_char_2024-06-17.json" ]; then
             echo "Chinese character dictionary file exists"
           else
-            echo "Chinese character dictionary file does not exist, creating empty file"
-            echo "[]" > dictionaries/chinese_chars/source/dictionary_char_2024-06-17.json
+            echo "Downloading Chinese character dictionary..."
+            curl -L -o dictionaries/chinese_chars/source/dictionary_char_2024-06-17.jsonl https://data.dong-chinese.com/dump/dictionary_char_2024-06-17.jsonl
+
+            echo "Converting Chinese character dictionary from JSONL to JSON..."
+            go run cmd/jsonl2json/main.go -input=dictionaries/chinese_chars/source/dictionary_char_2024-06-17.jsonl -output=dictionaries/chinese_chars/source/dictionary_char_2024-06-17.json
           fi
 
+          # Download and convert Chinese word dictionary
+          mkdir -p dictionaries/chinese_words/source
           if [ -f "dictionaries/chinese_words/source/dictionary_word_2024-06-17.json" ]; then
             echo "Chinese word dictionary file exists"
           else
-            echo "Chinese word dictionary file does not exist, creating empty file"
-            echo "[]" > dictionaries/chinese_words/source/dictionary_word_2024-06-17.json
+            echo "Downloading Chinese word dictionary..."
+            curl -L -o dictionaries/chinese_words/source/dictionary_word_2024-06-17.jsonl https://data.dong-chinese.com/dump/dictionary_word_2024-06-17.jsonl
+
+            echo "Converting Chinese word dictionary from JSONL to JSON..."
+            go run cmd/jsonl2json/main.go -input=dictionaries/chinese_words/source/dictionary_word_2024-06-17.jsonl -output=dictionaries/chinese_words/source/dictionary_word_2024-06-17.json
           fi
 
       - name: Generate Han 1-character dictionary files
