--- a/.github/workflows/build-han-1char.yml
+++ b/.github/workflows/build-han-1char.yml
@@ -85,7 +85,13 @@ jobs:
 
       - name: Generate Han 1-character dictionary files
         run: |
+          # Debug: Check if the Chinese dictionary files exist
+          echo "Checking if Chinese dictionary files exist..."
+          ls -la dictionaries/chinese_chars/source/
+          ls -la dictionaries/chinese_words/source/
+
           # The new sharded processor generates all shards at once, but we only need the han-1char shard
+          echo "Running the main program..."
           go run cmd/kiokun/main.go --writers 16 --silent
           echo "Generated $(find output_han_1char -type f | wc -l) files"
 
