--- a/.github/workflows/build-non-han.yml
+++ b/.github/workflows/build-non-han.yml
@@ -88,7 +88,13 @@ jobs:
 
       - name: Generate Non-Han dictionary files
         run: |
+          # Debug: Check if the Chinese dictionary files exist
+          echo "Checking if Chinese dictionary files exist..."
+          ls -la dictionaries/chinese_chars/source/
+          ls -la dictionaries/chinese_words/source/
+
           # The new sharded processor generates all shards at once, but we only need the non-han shard
+          echo "Running the main program..."
           go run cmd/kiokun/main.go --writers 16 --silent
           echo "Generated $(find output_non_han -type f | wc -l) files"
 
